initially tested - good to go

--- a/pcnmsg/Makefile
+++ b/pcnmsg/Makefile
@@ -2,6 +2,7 @@
 # Makefile for Popcorn messaging.
 #
 
+obj-$(CONFIG_POPCORN_KMSG) += ringBuffer.o
 obj-$(CONFIG_POPCORN_KMSG) += pcn_kmsg.o
 obj-$(CONFIG_POPCORN_KMSG) += pcn_ipi_test.o
 obj-$(CONFIG_POPCORN_KMSG) += pcn_kmsg_test.o
